@@ -40,6 +40,31 @@ del a {
   color: red;
 }
 
+img {
+  border-width: 0;
+}
+
+img .thumbnail_left {
+  float: left;
+  padding-right: 1.5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+img .thumbnail_center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5em;
+}
+
+img .thumbnail_right {
+  float: right;
+  padding-left: 1.5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
 hr {
   border: 0;
   color: #000000;
